2007-01-02  Joe Shaw  <joeshaw@novell.com>

	* gnome-modules.xml.in: Change the beagle layout some, and update
	project information.

	* people.xml.in: Add myself.
	
2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* gnome-modules.xml.in: Add beagle and bashee specific layouts.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* gnome-modules.xml.in: string-freeze gnome-2-16 and gnome-2-14.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* templates/language-release-doc-stats-modules.tmpl: Don't list non-existing templates.

	* gnome-modules.xml.in:
	* translation-teams.xml.in: Update more data.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* releases.py (Releases.__init__): Fix handling of releases without categories.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* people.xml.in:
	* translation-teams.xml.in: Update Bengali data.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* templates/module.tmpl: Priority to SVNWEB.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* people.py (get_roles_for):
	* templates/person.tmpl:
	Display obscured email address.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* translation-teams.xml.in: Updated mk entry.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* people.xml.in:
	* translation-teams.xml.in:
	Updated.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* translation-teams.xml.in: Update zh_HK team to list both zh_HK
	and zh_TW.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* teams.py: Fix langid setting for teams.

	* translation-teams.xml.in: Update vi, sl, ar team's data.
	* people.xml.in: Update pclouds' name, add Matic Žgur, Djihed Afifi.

2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* update-stats.py (LocStatistics.doc_l10n_stats): Use 'potbase'
	for translations as well.
	(LocStatistics.__init__): Default to SVN.

	* view-module.py (go_go): Use 'potbase' and correctly check for
	empty potfiles.
	* templates/show-stats.tmpl: Show 'updated' only if available.

2007-01-02  Danilo Šegan  <danilo@gnome.org>
