@@ -12,6 +12,15 @@
   </defaults>
 
 <!-- Gnome developers -->
+  <person id="abock">
+    <name>Aaron Bockover</name>
+    <email>abockover@novell.com</email>
+    <email>abock@gnome.org</email>
+    <nick>abock</nick>
+    <webpage>http://abock.org/</webpage>
+    <icon>http://planet.gnome.org/heads/abock.png</icon>
+    <bugzilla-account>abockover@novell.com</bugzilla-account>
+  </person>
   <person id="chpe">
     <name>Christian Persch</name>
     <email>chpe@gnome.org</email>
