@@ -1,3 +1,10 @@
+2007-01-02  Aaron Bockover  <abock@gnome.org>
+
+	* gnome-modules.xml.in: Change the banshee layout some, and update
+	project information.
+
+	* people.xml.in: Add myself.
+	
 2007-01-02  Joe Shaw  <joeshaw@novell.com>
 
 	* gnome-modules.xml.in: Change the beagle layout some, and update
